src/test/ui/issues/issue-21332.stderr
error[E0053]: method `next` has an incompatible type for trait
  --> $DIR/issue-21332.rs:5:5
   |
LL |     fn next(&mut self) -> Result<i32, i32> { Ok(7) }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected enum `std::option::Option`, found enum `std::result::Result`
   |
   = note: expected type `fn(&mut S) -> std::option::Option<i32>`
              found type `fn(&mut S) -> std::result::Result<i32, i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0053`.
